--- a/index.html
+++ b/index.html
@@ -4,22 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>بازی شطرنج دو نفره</title>
+    <!-- بارگذاری CSS مربوط به chessboard.js -->
     <link rel="stylesheet" href="https://unpkg.com/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css">
     <style>
         body {
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
         }
+
         #board {
             width: 400px;
             margin-top: 20px;
         }
+
         #status {
-            margin-top: 10px;
-            font-size: 1.2em;
+            margin-top: 20px;
+            font-size: 18px;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -28,34 +35,51 @@
     <div id="board"></div>
     <div id="status">نوبت سفید</div>
 
+    <!-- بارگذاری کتابخانه‌های chessboard.js و chess.js -->
     <script src="https://unpkg.com/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"></script>
     <script src="https://unpkg.com/chess.js@0.10.2/chess.min.js"></script>
     <script>
         const boardElement = document.getElementById('board');
         const statusElement = document.getElementById('status');
+        
+        // ایجاد بازی شطرنج جدید با chess.js
         const game = new Chess();
 
+        // به‌روزرسانی وضعیت بازی بعد از هر حرکت
         const onMoveEnd = () => {
-            const status = game.in_checkmate() ? 'مات' : game.in_draw() ? 'بازی مساوی' : 'نوبت ' + (game.turn() === 'w' ? 'سفید' : 'سیاه');
-            statusElement.innerText = status;
+            if (game.in_checkmate()) {
+                statusElement.innerText = 'بازی تمام شد: مات ' + (game.turn() === 'b' ? 'سفید' : 'سیاه');
+            } else if (game.in_draw()) {
+                statusElement.innerText = 'بازی مساوی';
+            } else if (game.in_check()) {
+                statusElement.innerText = 'چک! نوبت ' + (game.turn() === 'w' ? 'سفید' : 'سیاه');
+            } else {
+                statusElement.innerText = 'نوبت ' + (game.turn() === 'w' ? 'سفید' : 'سیاه');
+            }
         };
 
+        // جلوگیری از حرکت غیرمجاز مهره‌ها
         const onDragStart = (source, piece) => {
-            if (game.in_checkmate() || game.in_draw() || (game.turn() === 'w' && piece.search(/^b/) !== -1) || (game.turn() === 'b' && piece.search(/^w/) !== -1)) {
+            if (game.in_checkmate() || game.in_draw() || 
+                (game.turn() === 'w' && piece.search(/^b/) !== -1) || 
+                (game.turn() === 'b' && piece.search(/^w/) !== -1)) {
                 return false;
             }
         };
 
+        // تابع انتقال مهره‌ها و بررسی حرکت‌ها
         const onDrop = (source, target) => {
             const move = game.move({
                 from: source,
                 to: target,
-                promotion: 'q'
+                promotion: 'q' // وقتی سرباز به آخر بورد رسید به وزیر تبدیل می‌شود
             });
-            if (move === null) return 'snapback';
+
+            if (move === null) return 'snapback'; // اگر حرکت غیرمعتبر است، مهره به جای قبلی برگردد
             onMoveEnd();
         };
 
+        // تنظیمات بورد شطرنج
         const config = {
             draggable: true,
             position: 'start',
@@ -63,8 +87,10 @@
             onDrop: onDrop
         };
 
+        // ساخت بورد شطرنج
         const board = Chessboard('board', config);
 
+        // نمایش وضعیت اولیه
         onMoveEnd();
     </script>
 </body>
