--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تبدیل تصویر به کد باینری و بالعکس</title>
+    <title>تبدیل تصویر به کد باینری و بالعکس با فشرده‌سازی</title>
 </head>
 <body>
-    <h1>تبدیل تصویر به کد باینری و بالعکس</h1>
+    <h1>تبدیل تصویر به کد باینری و بالعکس با فشرده‌سازی</h1>
 
     <!-- بخش آپلود و تبدیل تصویر به باینری -->
     <h2>تبدیل تصویر به کد باینری</h2>
     <input type="file" id="imageInput" accept="image/*">
-    <button onclick="convertToBinary()">تبدیل به کد باینری</button>
+    <button onclick="convertToBinary()">تبدیل به کد باینری فشرده</button>
     <br><br>
     <canvas id="canvas" style="display: none;"></canvas>
-    <textarea id="binaryOutput" rows="10" cols="60" placeholder="کد باینری اینجا نمایش داده می‌شود"></textarea>
+    <textarea id="binaryOutput" rows="10" cols="60" placeholder="کد باینری فشرده اینجا نمایش داده می‌شود"></textarea>
 
-    <!-- بخش تبدیل باینری به تصویر -->
-    <h2>تبدیل کد باینری به تصویر</h2>
-    <textarea id="binaryInput" rows="10" cols="60" placeholder="کد باینری خود را وارد کنید"></textarea>
+    <!-- بخش تبدیل باینری فشرده به تصویر -->
+    <h2>تبدیل کد باینری فشرده به تصویر</h2>
+    <textarea id="binaryInput" rows="10" cols="60" placeholder="کد باینری فشرده خود را وارد کنید"></textarea>
     <button onclick="convertToImage()">تبدیل به تصویر</button>
     <br><br>
     <canvas id="resultCanvas"></canvas>
@@ -47,7 +47,9 @@
                             binaryData += gray > 128 ? '1' : '0';
                         }
 
-                        binaryOutput.value = binaryData;
+                        // تبدیل به Base64
+                        const base64Data = btoa(binaryData.match(/.{1,8}/g).map(byte => String.fromCharCode(parseInt(byte, 2))).join(''));
+                        binaryOutput.value = base64Data;
                     };
                     img.src = event.target.result;
                 };
@@ -61,15 +63,16 @@
             const binaryInput = document.getElementById('binaryInput').value;
             const resultCanvas = document.getElementById('resultCanvas');
             const width = 100; // عرض دلخواه تصویر
-            const height = Math.ceil(binaryInput.length / width); // ارتفاع براساس طول باینری
+            const binaryData = atob(binaryInput).split('').map(char => char.charCodeAt(0).toString(2).padStart(8, '0')).join('');
+            const height = Math.ceil(binaryData.length / width); // ارتفاع براساس طول باینری
 
             resultCanvas.width = width;
             resultCanvas.height = height;
             const ctx = resultCanvas.getContext('2d');
             const imageData = ctx.createImageData(width, height);
 
-            for (let i = 0; i < binaryInput.length; i++) {
-                const value = binaryInput[i] === '1' ? 255 : 0;
+            for (let i = 0; i < binaryData.length; i++) {
+                const value = binaryData[i] === '1' ? 255 : 0;
                 const pixelIndex = i * 4;
                 imageData.data[pixelIndex] = value; // قرمز
                 imageData.data[pixelIndex + 1] = value; // سبز
